# CppEnigmaMachine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: FUNDING.yml
src/: main.cpp  mainForLater.cpp
src/core/: Keylist.cpp  Keylist.hpp  Rotor.cpp  Rotor.hpp
src/utils/: FileUtils.cpp  FileUtils.hpp  SizedVector.cpp  SizedVector.hpp
